--- a/model.ipynb
+++ b/model.ipynb
@@ -871,8 +871,8 @@
     "                input_sequence = np.array(sequence[:-n_cols])#, dtype=np.int64) # dont include the last token\n",
     "                target_sequence = np.array(sequence[n_cols:])#, dtype=np.int64) # dont include the first token\n",
     "                \n",
-    "                input_sequence = np.pad(input_sequence, (0, max_length - len(input_sequence)), mode='constant', constant_values=eos)\n",
-    "                target_sequence = np.pad(target_sequence, (0, max_length - len(target_sequence)), mode='constant', constant_values=eos)\n",
+    "                # input_sequence = np.pad(input_sequence, (0, max_length - len(input_sequence)), mode='constant', constant_values=eos)\n",
+    "                # target_sequence = np.pad(target_sequence, (0, max_length - len(target_sequence)), mode='constant', constant_values=eos)\n",
     "                \n",
     "                dataset.append({\n",
     "                    'input_ids': input_sequence,\n",
@@ -990,7 +990,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "model: Memory usage: 1.9578437805175781 GB\n",
+      "model: Memory usage: 1.9651679992675781 GB\n",
       "max_position_embeddings\n",
       "Max length: 1024\n",
       "Vocab size: 50257\n",
@@ -998,8 +998,8 @@
       "Processing raw_data/ETTh1.csv\n",
       "Processing raw_data/exchange_rate.csv\n",
       "Created 12692 training examples\n",
-      "{'input_ids': array([32142, 22419, 30256, ..., 46835, 50256, 50256]), 'labels': array([22419, 30256, 11314, ..., 50256, 32199, 50256])}\n",
-      "dataset: Memory usage: 1.6245613098144531 GB\n"
+      "{'input_ids': array([32142, 22419, 30256, ..., 24481, 46835, 50256]), 'labels': array([22419, 30256, 11314, ..., 46835, 50256, 32199])}\n",
+      "dataset: Memory usage: 1.6255035400390625 GB\n"
      ]
     },
     {
@@ -1018,7 +1018,7 @@
        "        </style>\n",
        "      \n",
        "      <progress value='9519' max='9519' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [9519/9519 1:34:06, Epoch 3/3]\n",
+       "      [9519/9519 1:34:13, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -1030,383 +1030,383 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>100</td>\n",
-       "      <td>8.987800</td>\n",
+       "      <td>9.007300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>200</td>\n",
-       "      <td>8.078200</td>\n",
+       "      <td>8.089700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>300</td>\n",
-       "      <td>7.762000</td>\n",
+       "      <td>7.765300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>400</td>\n",
-       "      <td>7.627900</td>\n",
+       "      <td>7.625500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>500</td>\n",
-       "      <td>7.486600</td>\n",
+       "      <td>7.487500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>600</td>\n",
-       "      <td>7.400200</td>\n",
+       "      <td>7.404600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>700</td>\n",
-       "      <td>7.312700</td>\n",
+       "      <td>7.310900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>800</td>\n",
-       "      <td>7.044100</td>\n",
+       "      <td>7.046300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>900</td>\n",
-       "      <td>6.940200</td>\n",
+       "      <td>6.941700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1000</td>\n",
-       "      <td>6.889100</td>\n",
+       "      <td>6.876300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1100</td>\n",
-       "      <td>6.765800</td>\n",
+       "      <td>6.760800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1200</td>\n",
-       "      <td>6.557300</td>\n",
+       "      <td>6.546500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1300</td>\n",
-       "      <td>6.587500</td>\n",
+       "      <td>6.576000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1400</td>\n",
-       "      <td>6.484300</td>\n",
+       "      <td>6.477900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1500</td>\n",
-       "      <td>6.373100</td>\n",
+       "      <td>6.360300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1600</td>\n",
-       "      <td>6.237800</td>\n",
+       "      <td>6.220200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1700</td>\n",
-       "      <td>6.141300</td>\n",
+       "      <td>6.127400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1800</td>\n",
-       "      <td>6.164200</td>\n",
+       "      <td>6.152200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1900</td>\n",
-       "      <td>6.013300</td>\n",
+       "      <td>6.000500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2000</td>\n",
-       "      <td>5.929500</td>\n",
+       "      <td>5.913200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2100</td>\n",
-       "      <td>5.898800</td>\n",
+       "      <td>5.883800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2200</td>\n",
-       "      <td>5.881800</td>\n",
+       "      <td>5.871600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2300</td>\n",
-       "      <td>5.843200</td>\n",
+       "      <td>5.833100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2400</td>\n",
-       "      <td>5.833900</td>\n",
+       "      <td>5.820200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2500</td>\n",
-       "      <td>5.867500</td>\n",
+       "      <td>5.860300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2600</td>\n",
-       "      <td>5.756100</td>\n",
+       "      <td>5.746500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2700</td>\n",
-       "      <td>5.751200</td>\n",
+       "      <td>5.746200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2800</td>\n",
-       "      <td>5.633000</td>\n",
+       "      <td>5.624000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2900</td>\n",
-       "      <td>5.681100</td>\n",
+       "      <td>5.676600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3000</td>\n",
-       "      <td>5.597400</td>\n",
+       "      <td>5.595900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3100</td>\n",
-       "      <td>5.498200</td>\n",
+       "      <td>5.494100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3200</td>\n",
-       "      <td>5.491800</td>\n",
+       "      <td>5.488400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3300</td>\n",
-       "      <td>5.474600</td>\n",
+       "      <td>5.471100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3400</td>\n",
-       "      <td>5.395200</td>\n",
+       "      <td>5.390300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3500</td>\n",
-       "      <td>5.437500</td>\n",
+       "      <td>5.436900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3600</td>\n",
-       "      <td>5.386500</td>\n",
+       "      <td>5.381800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3700</td>\n",
-       "      <td>5.334500</td>\n",
+       "      <td>5.333700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3800</td>\n",
-       "      <td>5.286400</td>\n",
+       "      <td>5.287800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3900</td>\n",
-       "      <td>5.242100</td>\n",
+       "      <td>5.245200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4000</td>\n",
-       "      <td>5.356700</td>\n",
+       "      <td>5.354800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4100</td>\n",
-       "      <td>5.204400</td>\n",
+       "      <td>5.201800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4200</td>\n",
-       "      <td>5.216000</td>\n",
+       "      <td>5.216200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4300</td>\n",
-       "      <td>5.256200</td>\n",
+       "      <td>5.253900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4400</td>\n",
-       "      <td>5.172700</td>\n",
+       "      <td>5.177200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4500</td>\n",
-       "      <td>5.067600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4600</td>\n",
-       "      <td>5.138800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4700</td>\n",
-       "      <td>5.109100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4800</td>\n",
-       "      <td>5.068800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4900</td>\n",
-       "      <td>5.102900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5000</td>\n",
-       "      <td>5.047100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5100</td>\n",
-       "      <td>5.017200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5200</td>\n",
-       "      <td>4.986400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5300</td>\n",
-       "      <td>5.002800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5400</td>\n",
-       "      <td>5.012100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>5500</td>\n",
        "      <td>5.071100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>4600</td>\n",
+       "      <td>5.136800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4700</td>\n",
+       "      <td>5.113500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4800</td>\n",
+       "      <td>5.071000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4900</td>\n",
+       "      <td>5.102200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5000</td>\n",
+       "      <td>5.045700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5100</td>\n",
+       "      <td>5.023300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5200</td>\n",
+       "      <td>4.989400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5300</td>\n",
+       "      <td>5.007800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5400</td>\n",
+       "      <td>5.016000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5500</td>\n",
+       "      <td>5.076600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>5600</td>\n",
-       "      <td>5.049300</td>\n",
+       "      <td>5.050600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5700</td>\n",
-       "      <td>4.955600</td>\n",
+       "      <td>4.957900</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5800</td>\n",
-       "      <td>4.962600</td>\n",
+       "      <td>4.964100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5900</td>\n",
-       "      <td>4.983300</td>\n",
+       "      <td>4.989600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6000</td>\n",
-       "      <td>4.931900</td>\n",
+       "      <td>4.938100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6100</td>\n",
-       "      <td>4.937200</td>\n",
+       "      <td>4.942600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6200</td>\n",
-       "      <td>4.800400</td>\n",
+       "      <td>4.805300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6300</td>\n",
-       "      <td>4.835800</td>\n",
+       "      <td>4.836700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6400</td>\n",
-       "      <td>4.792200</td>\n",
+       "      <td>4.795300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6500</td>\n",
-       "      <td>4.904900</td>\n",
+       "      <td>4.908200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6600</td>\n",
-       "      <td>4.841200</td>\n",
+       "      <td>4.844000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6700</td>\n",
-       "      <td>4.785900</td>\n",
+       "      <td>4.789700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6800</td>\n",
-       "      <td>4.795900</td>\n",
+       "      <td>4.800800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6900</td>\n",
-       "      <td>4.808800</td>\n",
+       "      <td>4.812300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7000</td>\n",
-       "      <td>4.809400</td>\n",
+       "      <td>4.813800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7100</td>\n",
-       "      <td>4.818600</td>\n",
+       "      <td>4.823000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7200</td>\n",
-       "      <td>4.744000</td>\n",
+       "      <td>4.748400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7300</td>\n",
-       "      <td>4.832300</td>\n",
+       "      <td>4.836600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7400</td>\n",
-       "      <td>4.777300</td>\n",
+       "      <td>4.781700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7500</td>\n",
-       "      <td>4.759500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7600</td>\n",
-       "      <td>4.785600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7700</td>\n",
-       "      <td>4.829700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7800</td>\n",
-       "      <td>4.741400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>7900</td>\n",
        "      <td>4.765300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>7600</td>\n",
+       "      <td>4.789100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7700</td>\n",
+       "      <td>4.833600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7800</td>\n",
+       "      <td>4.746400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7900</td>\n",
+       "      <td>4.768300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <td>8000</td>\n",
-       "      <td>4.780500</td>\n",
+       "      <td>4.785200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8100</td>\n",
-       "      <td>4.788600</td>\n",
+       "      <td>4.791100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8200</td>\n",
-       "      <td>4.776900</td>\n",
+       "      <td>4.779200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8300</td>\n",
-       "      <td>4.803100</td>\n",
+       "      <td>4.806300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8400</td>\n",
-       "      <td>4.787800</td>\n",
+       "      <td>4.790300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8500</td>\n",
-       "      <td>4.736200</td>\n",
+       "      <td>4.738600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8600</td>\n",
-       "      <td>4.767000</td>\n",
+       "      <td>4.770700</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8700</td>\n",
-       "      <td>4.785500</td>\n",
+       "      <td>4.789300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8800</td>\n",
-       "      <td>4.750500</td>\n",
+       "      <td>4.754400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8900</td>\n",
-       "      <td>4.668900</td>\n",
+       "      <td>4.673200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9000</td>\n",
-       "      <td>4.650600</td>\n",
+       "      <td>4.654500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9100</td>\n",
-       "      <td>4.685000</td>\n",
+       "      <td>4.687400</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9200</td>\n",
-       "      <td>4.719600</td>\n",
+       "      <td>4.724500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9300</td>\n",
-       "      <td>4.695700</td>\n",
+       "      <td>4.699100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9400</td>\n",
-       "      <td>4.707300</td>\n",
+       "      <td>4.710200</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9500</td>\n",
-       "      <td>4.773100</td>\n",
+       "      <td>4.774500</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
