--- a/model.ipynb
+++ b/model.ipynb
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1877,7 +1877,7 @@
      "text": [
       "max_position_embeddings\n",
       "Max length: 1024\n",
-      "Vocab size: 32000\n",
+      "Vocab size: 151936\n",
       "Processing raw_data/exchange_rate.csv\n",
       "Processing raw_data/mpi_saale.csv\n",
       "max samples from file\n",
@@ -1886,61 +1886,87 @@
       "max samples from file\n",
       "Processing raw_data/Month_Value_1.csv\n",
       "Processing raw_data/ETTh1.csv\n",
-      "max samples from file\n",
+      "max samples from file\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Both `max_new_tokens` (=2048) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Created 3651 training examples\n",
-      "{'input_ids': array([15424, 14206, 16408, ...,  5737, 25354,  1091]), 'labels': array([14206, 16408,  3290, ..., 25354,  1091, 12371])}\n"
+      "{'input_ids': array([ 73239,  67457,  77910, ...,  27241, 120390,   5182]), 'labels': array([ 67457,  77910,  15625, ..., 120390,   5182,  58741])}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/100 [00:00<?, ?it/s]"
+      "  0%|          | 0/100 [00:00<?, ?it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 1024]) tensor([[15424, 14206, 16408,  ..., 25354,  1091,  1127]], device='cuda:0')\n",
+      "torch.Size([1, 3071]) tensor([[ 73239,  67457,  77910,  ...,  62988,  39622, 118199]],\n",
+      "       device='cuda:0')\n",
       "start\n",
-      "real tensor([14206, 16408,  3290, 25354,  2804, 13136,    14, 31999, 15677, 14894,\n",
-      "        16403,  3872, 25354,  3320, 13352,   257, 31999, 15641, 15169, 16473,\n",
-      "         3953, 25354,  3219, 13332,     0, 31999, 15584, 15739, 16468,  4172,\n",
-      "        25354,  3159], device='cuda:0')\n",
-      "pred tensor([14206, 16408,  3290, 25354,  2804, 13136,    14, 31999, 15677, 14894,\n",
-      "        16403,  3872, 25354,  3320, 13352,   257, 31999, 15641, 15169, 16473,\n",
-      "         3953, 25354,  3219, 13332,     0, 31999, 15584, 15739, 16468,  4172,\n",
-      "        25354,  3159], device='cuda:0')\n",
+      "real tensor([ 67457,  77910,  15625, 120390,  13317,  62375,     67, 151935,  74441,\n",
+      "         70724,  77887,  18385, 120390,  15766,  63399,   1221, 151935,  74269,\n",
+      "         72028,  78220,  18774, 120390,  15285,  63306,      0, 151935,  74000,\n",
+      "         74736,  78197,  19811, 120390,  15000], device='cuda:0')\n",
+      "pred tensor([ 67457,  77910,  15625, 120390,  13317,  62375,     67, 151935,  74441,\n",
+      "         70724,  77887,  18385, 120390,  15766,  63399,   1221, 151935,  74269,\n",
+      "         72028,  78220,  18774, 120390,  15285,  63306,      0, 151935,  74000,\n",
+      "         74736,  78197,  19811, 120390,  15000], device='cuda:0')\n",
       "middle (1020:1050)\n",
-      "real tensor([25354,  1091, 12371], device='cuda:0')\n",
-      "pred tensor([25354,  1091,  1127], device='cuda:0')\n",
+      "real tensor([120390,   5182,  58741], device='cuda:0')\n",
+      "pred tensor([120390,   5182,   8437, 107649, 126793,  20094,   7062,  23818,   2810,\n",
+      "         13581,  78328,  45865, 103817, 119769, 133610,  13653,  99479,  15300,\n",
+      "         71571,  92402, 119769,  48061,  20175,   2185,  13635,  41372,  55081,\n",
+      "         15737,  65019, 108977], device='cuda:0')\n",
       "end\n",
-      "real tensor([15920,  5643, 25354,  1003, 12122,  1671, 31999, 15021, 17504, 15901,\n",
-      "         5709, 25354,  1017, 12109,  1761, 31999, 15037, 17665, 15866,  5788,\n",
-      "        25354,   948, 12260,  1777, 31999, 15073, 17601, 15950,  5737, 25354,\n",
-      "         1091, 12371], device='cuda:0')\n",
-      "pred tensor([15920,  5643, 25354,  1003, 12122,  1671, 31999, 15021, 17504, 15901,\n",
-      "         5709, 25354,  1017, 12109,  1761, 31999, 15037, 17665, 15866,  5788,\n",
-      "        25354,   948, 12260,  1777, 31999, 15073, 17601, 15950,  5737, 25354,\n",
-      "         1091,  1127], device='cuda:0')\n"
+      "real tensor([ 75595,  26796, 120390,   4767,  57561,   7934, 151935,  71325,  83116,\n",
+      "         75502,  27107, 120390,   4832,  57499,   8365, 151935,  71399,  83878,\n",
+      "         75338,  27483, 120390,   4504,  58213,   8437, 151935,  71571,  83573,\n",
+      "         75736,  27241, 120390,   5182,  58741], device='cuda:0')\n",
+      "pred tensor([ 80087,  18186,      0,      0, 110305,  45580,      0,  19926,  61775,\n",
+      "        102948,  11856, 128394,  55081, 111405,  65297,  77635, 151935,  71474,\n",
+      "         97572,  38206,  19958,  55055,   8269,  13656,  21944,  24275,  10739,\n",
+      "             0,      0,  62988,  39622, 118199], device='cuda:0')\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 10%|█         | 10/100 [00:26<03:59,  2.66s/it]"
+      " 10%|█         | 10/100 [00:01<00:11,  7.86it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 21%|██        | 21/100 [00:02<00:09,  8.31it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 31%|███       | 31/100 [00:03<00:08,  8.09it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 41%|████      | 41/100 [00:05<00:07,  7.98it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 51%|█████     | 51/100 [00:06<00:06,  7.93it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 61%|██████    | 61/100 [00:07<00:04,  7.89it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 71%|███████   | 71/100 [00:08<00:03,  7.87it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 81%|████████  | 81/100 [00:10<00:02,  7.85it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 91%|█████████ | 91/100 [00:11<00:01,  7.83it/s]Both `max_new_tokens` (=1) and `max_length`(=1024) seem to have been set. `max_new_tokens` will take precedence. Please refer to the documentation for more information. (https://huggingface.co/docs/transformers/main/en/main_classes/text_generation)\n",
+      " 10%|█         | 10/100 [00:12<01:55,  1.28s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([100]) tensor(12371.)\n",
-      "tensor(460.) tensor(17789.) tensor(3797.9900) tensor(4216.5039)\n",
+      "torch.Size([100]) tensor(58741.)\n",
+      "tensor(396.) tensor(82707.) tensor(35174.7812) tensor(24205.3555)\n",
       "0.0\n",
-      "tensor(91097624.)\n"
+      "tensor(1.1354e+09)\n"
      ]
     },
     {
@@ -2003,14 +2029,15 @@
     "            dataset[0]['input_ids'].unsqueeze(0),\n",
     "            max_length=1024,\n",
     "            temperature=temperature,\n",
+    "            max_new_tokens=1,\n",
     "            num_return_sequences=m,\n",
     "            pad_token_id=model.config.vocab_size - 1,\n",
     "            do_sample=True\n",
     "        )\n",
     "       \n",
     "\n",
-    "        for j in range(m):\n",
-    "            pred[i+j] = output[j][-1].cpu() # have to do this to get the value\n",
+    "        for j in range(m): # -1\n",
+    "            pred[i+j] = output[j][1023].cpu() # have to do this to get the value\n",
     "        pbar.update(m)\n",
     "\n",
     "    # change out of scientific notation\n",
@@ -2029,7 +2056,7 @@
     "    \n",
     "\n",
     "# Example \n",
-    "generated_text = test_model('./models/TinyLlama/TinyLlama-1.1B-Chat-v1.0')"
+    "generated_text = test_model('./models/Qwen/Qwen2.5-0.5B')"
    ]
   },
   {
