--- a/data.ipynb
+++ b/data.ipynb
@@ -57,6 +57,66 @@
     "    for i in range(1, 1024*10):\n",
     "        f.write(f\"{round(np.sin(i*0.1), 3)}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "with open('raw_data/001_sine-comb.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        f.write(f\"{i},{round(np.sin(i*0.1), 3),{i & 1}}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "with open('raw_data/001_arcsin.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        f.write(f\"{round(np.arcsin(i*0.1), 3)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/000_count-10.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        f.write(f\"{i % 11}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/001_gears.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        f.write(f\"{int(i % 1 == 0)},{int(i % 2 == 0)},{int(i % 4 == 0)},{int(i % 8 == 0)}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/002_time.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        s = i % 60\n",
+    "        m = i // 60 % 60\n",
+    "        h = i // 3600 % 24\n",
+    "        f.write(f\"{h},{m},{s}\\n\")"
+   ]
   }
  ],
  "metadata": {
