--- a/data.ipynb
+++ b/data.ipynb
@@ -72,18 +72,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "with open('raw_data/001_arcsin.csv', 'w') as f:\n",
-    "    for i in range(1, 1024*10):\n",
-    "        f.write(f\"{round(np.arcsin(i*0.1), 3)}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
@@ -116,6 +104,45 @@
     "        m = i // 60 % 60\n",
     "        h = i // 3600 % 24\n",
     "        f.write(f\"{h},{m},{s}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/002_quadratic.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        f.write(f\"{x**2 + 2 * x + 5}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/001_xy.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        y = 2 * x + 5\n",
+    "        f.write(f\"{i},{x},{y}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/002_xyz.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        y = 2 * x + 5\n",
+    "        z = 3 * y + 1\n",
+    "        f.write(f\"{i},{x},{y},{z}\\n\")"
    ]
   }
  ],
