better training and stuff

--- a/data.ipynb
+++ b/data.ipynb
@@ -144,6 +144,57 @@
     "        z = 3 * y + 1\n",
     "        f.write(f\"{i},{x},{y},{z}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/001_counting.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        f.write(f\"{x}{ '\\n' if i % 5 == 0 else ',' }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/002_polyrow.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        x = 2 * x + 5\n",
+    "        f.write(f\"{x}{ '\\n' if i % 5 == 0 else ',' }\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/train_001_10-20.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 10\n",
+    "        f.write(f\"{x + 10}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/train_002_xyz.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        y = x + 2\n",
+    "        z = 3 * y\n",
+    "        f.write(f\"{i},{x},{y},{z}\\n\")"
+   ]
   }
  ],
  "metadata": {
