--- a/model.ipynb
+++ b/model.ipynb
@@ -987,11 +987,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import GPT2LMHeadModel, Trainer, TrainingArguments, AutoModelForCausalLM\n",
+    "from transformers import Trainer, TrainingArguments, AutoModelForCausalLM\n",
     "import time\n",
     "\n",
     "def train_model(model_name, output_dir, epochs=3, batch_size=4, stride=128, window=1024):\n",
@@ -1361,30 +1361,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_model(\n",
-    "    model_name='google/gemma-2b',\n",
-    "    output_dir='models'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_model(\n",
-    "    model_name='google/gemma-2-2b',\n",
-    "    output_dir='models'\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1781,6 +1757,8 @@
    ],
    "source": [
     "train_model(\n",
+    "    # model_name='google/gemma-2b',\n",
+    "    # model_name='google/gemma-2-2b',\n",
     "    # model_name='TinyLlama/TinyLlama-1.1B-Chat-v1.0',\n",
     "    # model_name='microsoft/phi-2',\n",
     "    # model_name='microsoft/phi-1_5',\n",
@@ -1794,7 +1772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1879,18 +1857,18 @@
    ],
    "source": [
     "import torch\n",
-    "from transformers import GPT2LMHeadModel, GPT2Tokenizer, AutoModelForCausalLM\n",
+    "from transformers import AutoModelForCausalLM\n",
     "from sklearn.metrics import r2_score\n",
     "from tqdm import tqdm\n",
     "\n",
     "def test_model(model_path, temperature=0.7):\n",
     "    model = AutoModelForCausalLM.from_pretrained(model_path).to(device)\n",
-    "    # tokenizer = GPT2Tokenizer.from_pretrained('gpt2')\n",
     "\n",
     "    # load dataset\n",
     "    \n",
     "    # Prepare dataset\n",
-    "    dataset = GPTDataset(model, stride=128, window=1024, files=['raw_data/000_mul.csv'])\n",
+    "    input_files = [str(file) for file in Path('raw_data').glob('train*.csv')]\n",
+    "    dataset = GPTDataset(model, stride=128, window=1024, files=input_files)\n",
     "    \n",
     "    # Generate text\n",
     "    output = model.generate(\n",
@@ -1940,23 +1918,22 @@
     "            pred[i+j] = output[j][1023].cpu() # have to do this to get the value\n",
     "        pbar.update(m)\n",
     "\n",
-    "    # change out of scientific notation\n",
-    "\n",
-    "    print(real.shape, real[0])\n",
-    "    # print(pred.shape, pred)\n",
-    "    print(min(pred), max(pred), torch.mean(pred), torch.std(pred))\n",
+    "    print(f\"real: shape: {real.shape}, goal val: {real[0]}\")\n",
+    "    print(f\"min: {min(real)}, max: {max(real)}, mean: {torch.mean(real)}, std: {torch.std(real)}\")\n",
     "\n",
     "    # r2 score\n",
-    "    print(r2_score(real, pred))\n",
+    "    print('r2:', r2_score(real, pred))\n",
     "\n",
     "    # get the metrics\n",
     "    mse = torch.nn.MSELoss()\n",
     "    loss = mse(real, pred)\n",
-    "    print(loss)\n",
+    "    print('mse:', loss)\n",
     "    \n",
     "\n",
-    "# Example\n",
-    "generated_text = test_model('./models/gpt2/24-11-28_16')"
+    "model_path = 'gpt2'\n",
+    "# get latest folder in models\n",
+    "latest = sorted(os.listdir(f\"./models/{model_path}\"))[-1]\n",
+    "generated_text = test_model(f\"./models/{model_path}/{latest}\")"
    ]
   },
   {
