--- a/data.ipynb
+++ b/data.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,19 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('raw_data/001_counting.csv', 'w') as f:\n",
     "    for i in range(1, 1024*10):\n",
     "        x = i % 100\n",
-    "        f.write(f\"{x}{ '\\n' if i % 5 == 0 else ',' }\")"
+    "        ending = '\\n' if i % 5 == 0 else ','\n",
+    "        text = f\"{x}\" + ending\n",
+    "        f.write(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,12 +169,15 @@
     "    for i in range(1, 1024*10):\n",
     "        x = i % 100\n",
     "        x = 2 * x + 5\n",
-    "        f.write(f\"{x}{ '\\n' if i % 5 == 0 else ',' }\")"
+    "        \n",
+    "        ending = '\\n' if i % 5 == 0 else ','\n",
+    "        text = f\"{x}\" + ending\n",
+    "        f.write(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,11 +200,18 @@
     "        z = 3 * y\n",
     "        f.write(f\"{i},{x},{y},{z}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "its530_py38",
+   "display_name": "Python 3.9 (Default)",
    "language": "python",
    "name": "python3"
   },
@@ -213,9 +225,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
