--- a/data.ipynb
+++ b/data.ipynb
@@ -189,6 +189,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('raw_data/train_001_poly.csv', 'w') as f:\n",
+    "    for i in range(1, 1024*10):\n",
+    "        x = i % 100\n",
+    "        x = 3 * x + 4\n",
+    "        f.write(f\"{x}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
@@ -200,13 +213,6 @@
     "        z = 3 * y\n",
     "        f.write(f\"{i},{x},{y},{z}\\n\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
