--- a/data.ipynb
+++ b/data.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,6 +213,100 @@
     "        z = 3 * y\n",
     "        f.write(f\"{i},{x},{y},{z}\\n\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11500\n",
+      "  Date;Price min;Price max\n",
+      "0       08-02-2022;0.8;2.9\n",
+      "0       08-02-2022;0.8;2.9\n",
+      "0       08-02-2022;0.8;2.9\n",
+      "0       08-02-2022;0.8;2.9\n",
+      "0       08-02-2022;0.8;2.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv('raw_data/004_apple.csv')\n",
+    "df = df.loc[df.index.repeat(50)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/004_apple.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7650\n",
+      "  Date;Price min;Price max\n",
+      "0       11-10-2021;0.0;0.0\n",
+      "0       11-10-2021;0.0;0.0\n",
+      "0       11-10-2021;0.0;0.0\n",
+      "0       11-10-2021;0.0;0.0\n",
+      "0       11-10-2021;0.0;0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv('raw_data/004_apricot.csv')\n",
+    "df = df.loc[df.index.repeat(50)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/004_apricot.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2900\n",
+      "  Date;Price min;Price max\n",
+      "0       28-02-2022;2.0;2.6\n",
+      "0       28-02-2022;2.0;2.6\n",
+      "0       28-02-2022;2.0;2.6\n",
+      "0       28-02-2022;2.0;2.6\n",
+      "0       28-02-2022;2.0;2.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv('raw_data/004_banana.csv')\n",
+    "df = df.loc[df.index.repeat(100)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/004_banana.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
