--- a/data.ipynb
+++ b/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -274,14 +274,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2900\n",
+      "5800\n",
       "  Date;Price min;Price max\n",
       "0       28-02-2022;2.0;2.6\n",
       "0       28-02-2022;2.0;2.6\n",
@@ -303,10 +303,251 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8v/kyhpjx6d3y1b7dp0twz_83sw0000gn/T/ipykernel_36683/2924597830.py:3: DtypeWarning: Columns (2) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv('raw_data/city_temperature.csv')\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AvgTemperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>64.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>49.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>48.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>47.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   AvgTemperature\n",
+       "0            64.2\n",
+       "1            49.4\n",
+       "2            48.8\n",
+       "3            46.4\n",
+       "4            47.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>AvgTemperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>64.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>49.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>48.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>46.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>47.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Region  Country State     City  Month  Day  Year  AvgTemperature\n",
+       "0  Africa  Algeria   NaN  Algiers      1    1  1995            64.2\n",
+       "1  Africa  Algeria   NaN  Algiers      1    2  1995            49.4\n",
+       "2  Africa  Algeria   NaN  Algiers      1    3  1995            48.8\n",
+       "3  Africa  Algeria   NaN  Algiers      1    4  1995            46.4\n",
+       "4  Africa  Algeria   NaN  Algiers      1    5  1995            47.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv('raw_data/city_temperature.csv')\n",
+    "# remove all but avgTemp\n",
+    "df_temp = df[['AvgTemperature']]\n",
+    "display(df_temp.head())\n",
+    "df_temp.to_csv('raw_data/004_city-temperature.csv', index=False)\n",
+    "\n",
+    "df.to_csv('raw_data/005_city-temperature.csv', index=False)\n",
+    "display(df.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26100\n",
+      "   2019-12-01  53\n",
+      "0  2019-12-08  55\n",
+      "0  2019-12-08  55\n",
+      "0  2019-12-08  55\n",
+      "0  2019-12-08  55\n",
+      "0  2019-12-08  55\n",
+      "26100\n",
+      "   2019-12-01  2\n",
+      "0  2019-12-08  2\n",
+      "0  2019-12-08  2\n",
+      "0  2019-12-08  2\n",
+      "0  2019-12-08  2\n",
+      "0  2019-12-08  2\n",
+      "26100\n",
+      "   2019-12-01  52\n",
+      "0  2019-12-08  41\n",
+      "0  2019-12-08  41\n",
+      "0  2019-12-08  41\n",
+      "0  2019-12-08  41\n",
+      "0  2019-12-08  41\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('raw_data/multiTimeline.csv', skiprows=3)\n",
+    "df = df.loc[df.index.repeat(100)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/003_christmas.csv', index=False)\n",
+    "\n",
+    "# halloween\n",
+    "df = pd.read_csv('raw_data/multiTimeline-2.csv', skiprows=3)\n",
+    "df = df.loc[df.index.repeat(100)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/003_halloween.csv', index=False)\n",
+    "\n",
+    "# football\n",
+    "df = pd.read_csv('raw_data/multiTimeline-3.csv', skiprows=3)\n",
+    "df = df.loc[df.index.repeat(100)]\n",
+    "print(len(df))\n",
+    "print(df.head())\n",
+    "df.to_csv('raw_data/003_football.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
