--- a/data.ipynb
+++ b/data.ipynb
@@ -216,31 +216,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11500\n",
-      "  Date;Price min;Price max\n",
-      "0       08-02-2022;0.8;2.9\n",
-      "0       08-02-2022;0.8;2.9\n",
-      "0       08-02-2022;0.8;2.9\n",
-      "0       08-02-2022;0.8;2.9\n",
-      "0       08-02-2022;0.8;2.9\n"
+      "28750000\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Price min</th>\n",
+       "      <th>Price max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08-02-2022</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08-02-2022</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08-02-2022</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08-02-2022</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>08-02-2022</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  Price min  Price max\n",
+       "0  08-02-2022        0.8        2.9\n",
+       "0  08-02-2022        0.8        2.9\n",
+       "0  08-02-2022        0.8        2.9\n",
+       "0  08-02-2022        0.8        2.9\n",
+       "0  08-02-2022        0.8        2.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "df = pd.read_csv('raw_data/004_apple.csv')\n",
+    "df = pd.read_csv('raw_data/004_apple.csv', sep=';')\n",
     "df = df.loc[df.index.repeat(50)]\n",
     "print(len(df))\n",
-    "print(df.head())\n",
-    "df.to_csv('raw_data/004_apple.csv', index=False)"
+    "display(df.head())\n",
+    "# df.to_csv('raw_data/004_apple.csv', index=False)"
    ]
   },
   {
